--- a/Front-angular/src/app/Components/products/myProduct.component.html
+++ b/Front-angular/src/app/Components/products/myProduct.component.html
@@ -6,6 +6,5 @@
     </div>
   </div>
 
-    <myProduct-table [categories]="categories" [products]="products"></myProduct-table>
-
+  <myProduct-table [products]="products"></myProduct-table>
 </div>
