--- a/Front-angular/src/app/Components/products/myProduct-table.component.html
+++ b/Front-angular/src/app/Components/products/myProduct-table.component.html
@@ -1,14 +1,5 @@
 <div class="row ">
   <div class="form-group row">
-    <label class="col-sm-2 col-form-label" for="category-select">Product type:</label>
-    <div class="col-sm-10">
-      <select [ngModel]="filterBy" (ngModelChange)="changeFilter($event)" id="category-select">
-        <option selected="selected" value=0> All</option>
-        <option *ngFor="let category of categories" [value]="category.categoryId"> {{category.title}} </option>
-      </select>
-    </div>
-  </div>
-  <div class="form-group row">
     <label class="col-sm-2 col-form-label" for="order-select">Sort By:</label>
     <div class="col-sm-10">
       <select [ngModel]="sortBy" (ngModelChange)="changeSort($event)" id="order-select">
@@ -19,43 +10,43 @@
     </div>
   </div>
 </div>
-  <div class="card-body">
-    <div class="table-responsive">
-      <table id="ProductsTable" class="table table-striped table-hover" style="width: 100%">
-        <thead>
-        <tr>
-          <th style="width: 2%"></th>
-          <th style="width: 60%; text-align: left;">Product</th>
-          <th style="width: 10%">Quantity</th>
-          <th style="width: 10%">Expire Date</th>
-          <th style="width: 3%">Edit</th>
-          <th style="width: 3%">Delete</th>
-        </tr>
-        </thead>
-        <tbody *ngFor="let visibleProduct of visibleProducts">
-        <tr>
-          <td><input type="checkbox" id="{{visibleProduct?.productId}}"
-                     name="{{visibleProduct?.productId}}"
-                     value="{{visibleProduct?.productId}}"></td>
-          <td style="text-align: left">{{visibleProduct?.name}}</td>
-          <td>{{visibleProduct?.quantity}}</td>
-          <td>{{visibleProduct?.expireDate | date:'dd-MM-y'}}</td>
-          <td>
-            <i class="bi bi-pencil-square" [routerLink]="['/MyProducts/edit/' + visibleProduct?.productId]"></i>
-          </td>
-          <td><i class="bi bi-x-lg" (click)="delete(visibleProduct?.productId)"></i></td>
-        </tr>
-        </tbody>
-        <tfoot>
-        <tr>
-          <th style="width: 2%"></th>
-          <th style="width: 40%; text-align: left;">Product</th>
-          <th style="width: 10%">Quantity</th>
-          <th style="width: 10%">Expire Date</th>
-          <th style="width: 10%">Edit</th>
-          <th style="width: 10%">Delete</th>
-        </tr>
-        </tfoot>
-      </table>
-    </div>
+<div class="card-body">
+  <div class="table-responsive">
+    <table id="ProductsTable" class="table table-striped table-hover" style="width: 100%">
+      <thead>
+      <tr>
+        <th style="width: 2%"></th>
+        <th style="width: 60%; text-align: left;">Product</th>
+        <th style="width: 10%">Quantity</th>
+        <th style="width: 10%">Expire Date</th>
+        <th style="width: 3%">Edit</th>
+        <th style="width: 3%">Archive</th>
+      </tr>
+      </thead>
+      <tbody *ngFor="let visibleProduct of visibleProducts">
+      <tr>
+        <td><input type="checkbox" id="{{visibleProduct?.idProduct}}"
+                   name="{{visibleProduct?.idProduct}}"
+                   value="{{visibleProduct?.idProduct}}"></td>
+        <td style="text-align: left">{{visibleProduct?.productName}}</td>
+        <td>{{visibleProduct?.amountLeft}}</td>
+        <td>{{visibleProduct?.expireDate | date:'dd-MM-y'}}</td>
+        <td>
+          <i class="bi bi-pencil-square" [routerLink]="['/MyProducts/edit/' + visibleProduct?.idProduct]"></i>
+        </td>
+        <td><i class="bi bi-x-lg" (click)="archive(visibleProduct?.idProduct)"></i></td>
+      </tr>
+      </tbody>
+      <tfoot>
+      <tr>
+        <th style="width: 2%"></th>
+        <th style="width: 40%; text-align: left;">Product</th>
+        <th style="width: 10%">Quantity</th>
+        <th style="width: 10%">Expire Date</th>
+        <th style="width: 10%">Edit</th>
+        <th style="width: 10%">Archive</th>
+      </tr>
+      </tfoot>
+    </table>
   </div>
+</div>
