--- a/Front-angular/src/app/Components/products/myProduct-table.component.html
+++ b/Front-angular/src/app/Components/products/myProduct-table.component.html
@@ -10,6 +10,9 @@
     </div>
   </div>
 </div>
+
+<button (click)="toggleShow()" type="checkbox">show/hide</button>
+
 <div class="card-body">
   <div class="table-responsive">
     <table id="ProductsTable" class="table table-striped table-hover" style="width: 100%">
@@ -50,3 +53,5 @@
     </table>
   </div>
 </div>
+
+
