--- a/Front-angular/src/app/Components/products/myProduct-table.component.css
+++ b/Front-angular/src/app/Components/products/myProduct-table.component.css
@@ -1,12 +1,8 @@
 
-.bi-x-lg {
+.archive {
   color: #E05C65;
-  cursor: pointer;
 }
 
-.bi-pencil-square {
-  cursor: pointer;
-}
 
 cell-center {
   text-align: center;
