--- a/Front-angular/src/styles.css
+++ b/Front-angular/src/styles.css
@@ -1,3 +1,6 @@
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
+
 :root {
   --offcanvas-width: 270px;
   --topNavbarHeight: 0px;
@@ -11,3 +14,7 @@
     margin-left: var(--offcanvas-width);
   }
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
