Search and add product

--- a/Front-angular/src/app/Components/login/login.component.css
+++ b/Front-angular/src/app/Components/login/login.component.css
@@ -1,5 +1,5 @@
 .container-fluid {
-  background-image: url("/assets/images/login.jpg");
+  background-image: url("/assets/images/background1.jpg");
   background-color: #F8751E;
   height: 100vh;
 }
