--- a/Front-angular/src/app/Components/products/search/search-product.component.html
+++ b/Front-angular/src/app/Components/products/search/search-product.component.html
@@ -1,50 +1,64 @@
-<header class="bg-light">
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <nav class="navbar navbar-expand-lg navbar-light">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                  aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <div class="mr-auto" style="width: 100%;">
-
-              <form class="form-inline my-2 my-lg-0" #f="ngForm" (ngSubmit)="onSubmit(f)">
-                <input class="form-control mr-sm-2" type="search" name="search" ngModel placeholder="Search"
-                       aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-              </form>
-
-            </div>
-          </div>
-        </nav>
+<div class="container-fluid d-flex align-items-center justify-content-center" style="height: 100vh;"
+     *ngIf="!valueSearch">
+  <div class="col-md-7">
+    <form class="form-inline my-2 my-lg-0" #f="ngForm" (ngSubmit)="onSubmit(f)">
+      <div class="form-group form-floating">
+        <input ngModel class="form-control mr-sm-2" type="search" name="search" placeholder="Search"
+               aria-label="Search" id="search" required/>
+        <label class="mx-3" for="search">Enter product name or barcode</label>
       </div>
-    </div>
-    <div class="row">
-      <div class="mt-4 mb-4" *ngIf="searchService.options$ | async as selectedOptions">
-        <header *ngIf="selectedOptions.length > 0">
-          <h3>Search Result list</h3>
-          <h5>Search fraze: {{valueSearch}}</h5>
-        </header>
-        <div class="row row-cols-3 row-cols-md-3">
-          <div class="col mb-4" *ngFor="let item of selectedOptions">
-            <div class="card">
-              <div *ngIf="selectedOptions.length > 0">
-                <div class="card-body">
-                  <h5 class="card-title">{{item.productName}}</h5>
-                  <p class="card-text"> {{item.categories}} </p>
-                  <p>
-                    <span>Quantity: {{item.productQuantity}} {{item.productSizeType}} </span>
-                  </p>
-                  <button [routerLink]="['/MyProducts/search/' + item.id]">Add to your storage</button>
-                </div>
-              </div>
-            </div>
-          </div>
+      <div class="form-group">
+        <button class="button1 btn btn-primary btn-block" type="submit">Search for products</button>
+      </div>
+    </form>
+  </div>
+</div>
+
+<div class="container-fluid" *ngIf="valueSearch">
+  <div class="row justify-content-md-center">
+    <div class="col-md-8 mt-5 pt-3">
+      <form class="form-inline my-2 my-lg-0" #f="ngForm" (ngSubmit)="onSubmit(f)">
+        <div class="form-group form-floating">
+          <input ngModel class="form-control mr-sm-2" type="search" name="search" placeholder="Search"
+                 aria-label="Search" id="search2" required/>
+          <label class="mx-3" for="search2">Enter product name or barcode</label>
         </div>
+        <div class="form-group">
+          <button class="button1 btn btn-primary btn-block" type="submit">Search for products</button>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <div class="mt-4 mb-4" *ngIf="searchService.options$ | async as selectedOptions">
+    <div class="row justify-content-md-center">
+      <header *ngIf="selectedOptions.length > 0">
+        <h3>Search Result list</h3>
+        <h5>Search fraze: {{valueSearch}}</h5>
+      </header>
+    </div>
+    <div class="row row-cols-3 row-cols-md-3">
+      <div class="col mb-4 " *ngFor="let item of selectedOptions">
+        <mat-card class="card">
+          <mat-card-title-group>
+            <mat-card-title>{{item.productName}}</mat-card-title>
+            <mat-card-subtitle>Quantity: {{item.productQuantity}} {{item.productSizeType}} </mat-card-subtitle>
+            <img *ngIf="item.ecoscoreTags!= '[\'unknown\']'" mat-card-sm-image
+                 src="/assets/images/nutriscore/nutriscore-{{item.ecoscoreTags}}.svg">
+          </mat-card-title-group>
+          <mat-card-content>
+            {{item.categories}}
+          </mat-card-content>
+          <div class="row justify-content-around">
+          <button class="button-storage" (click)="openDialog(item.id)">Add to your storage
+            </button>
+            <button class="button-shopping"
+                    [routerLink]="['/MyProducts/search/' + item.id]">Show product details
+            </button>
+          </div>
+        </mat-card>
       </div>
     </div>
   </div>
-</header>
+</div>
+
