--- a/Front-angular/src/app/Components/register/register.component.css
+++ b/Front-angular/src/app/Components/register/register.component.css
@@ -1,8 +1,7 @@
 .container-fluid {
-  background-image: url("/assets/images/register.jpg");
+  background-image: url("/assets/images/background2.jpg");
   background-color: #F8751E;
   height: 100vh;
-
 }
 
 form {
