Styling and optimization

--- a/WebAppModule/src/app/Components/products/create/create-myProduct.component.css
+++ b/WebAppModule/src/app/Components/products/create/create-myProduct.component.css
@@ -1,6 +1,6 @@
 
 .container-fluid {
-  background-image: url("/assets/images/storage.jpg");
+  background-image: url("/assets/images/background6.jpg");
   background-color: #F0F0F0;
   background-size: cover;
   height: 100vh;
