--- a/WebAppModule/src/app/Components/products/create/create-myProduct.component.html
+++ b/WebAppModule/src/app/Components/products/create/create-myProduct.component.html
@@ -10,21 +10,34 @@
         </div>
 
 
-        <div class="form-group row" [ngClass]="{'error' :name.invalid && name.dirty }">
+        <div class="form-group row" [ngClass]="{'error' :productName.invalid && productName.dirty }">
 
           <label for="productName" class="col-sm-2 col-form-label">Product Name:</label>
           <div class="col-sm-10">
-            <em *ngIf="name.invalid && name.dirty">Required</em>
-            <input formControlName="name" id="productName" type="text" class="form-control"
+            <em *ngIf="productName.invalid && productName.dirty">Required</em>
+            <input formControlName="productName" id="productName" type="text" class="form-control"
                    placeholder="product name..."/>
           </div>
         </div>
 
-        <div class="form-group row" [ngClass]="{'error' :quantity.invalid && quantity.dirty }">
-          <label for="quantity" class="col-sm-2 col-form-label">Quantity:</label>
+        <div class="form-group row" [ngClass]="{'error' :productQuantity.invalid && productQuantity.dirty }">
+          <label for="productQuantity" class="col-sm-2 col-form-label">Quantity:</label>
           <div class="col-sm-10">
-            <em *ngIf="quantity.invalid && quantity.dirty">Required</em>
-            <input formControlName="quantity" id="quantity" type="text" class="form-control" placeholder="quantity..."/>
+            <em *ngIf="productQuantity.invalid && productQuantity.dirty">Required</em>
+            <input formControlName="productQuantity" id="productQuantity" type="text" class="form-control"
+                   placeholder="quantity..."/>
+          </div>
+        </div>
+
+        <div class="form-group row" [ngClass]="{'error' :productSizeType.invalid && productSizeType.dirty }">
+          <label class="col-sm-2 col-form-label">Product type:</label>
+          <div class="col-sm-10">
+            <em *ngIf="productSizeType.invalid && productSizeType.dirty">Required</em>
+            <select formControlName="productSizeType" class="form-control">
+              <option value="ml"> ml</option>
+              <option value="g"> g</option>
+              <option value="pcs"> pcs</option>
+            </select>
           </div>
         </div>
 
