--- a/WebAppModule/src/styles.css
+++ b/WebAppModule/src/styles.css
@@ -10,11 +10,18 @@
   body {
     overflow: auto !important;
   }
+
   main {
     margin-left: var(--offcanvas-width);
   }
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+  height: 100vh;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
