--- a/WebAppModule/src/app/Components/products/myProduct-table.component.css
+++ b/WebAppModule/src/app/Components/products/myProduct-table.component.css
@@ -1,6 +1,14 @@
 
 .archive {
-  color: #E05C65;
+  color: #b4121e;
+}
+
+.expired{
+  background-color: rgba(255, 139, 128, 0.9) !important;
+}
+
+.expired-soon{
+  background-color: rgba(255, 218, 128, 0.9) !important;
 }
 
 .mat-button-toggle-checked {
@@ -27,7 +35,7 @@ table {
 }
 
 table thead tr {
-  background-color: rgba(47, 204, 118, 0.95);
+  background-color: rgba(47, 204, 118, 0.9);
   color: #ffffff;
   text-align: left;
 }
