--- a/WebAppModule/src/app/Components/products/search/form-add/dialog-add-product.component.html
+++ b/WebAppModule/src/app/Components/products/search/form-add/dialog-add-product.component.html
@@ -11,7 +11,7 @@
   <div *ngIf="changeData">
     <mat-form-field appearance="fill">
       <mat-label>Product Quantity</mat-label>
-      <input matInput [(ngModel)]="data.quantity">
+      <input matInput type="number" [(ngModel)]="data.quantity">
     </mat-form-field>
 
     <mat-form-field appearance="fill">
