--- a/WebAppModule/src/app/Components/products/myProduct-table.component.html
+++ b/WebAppModule/src/app/Components/products/myProduct-table.component.html
@@ -1,26 +1,23 @@
 <div class="card-body">
-  <mat-button-toggle-group [ngModel]="sortBy" (ngModelChange)="changeSort($event)" id="order-select">
-    <mat-button-toggle disabled>Sort By:</mat-button-toggle>
-    <mat-button-toggle value="name">Name</mat-button-toggle>
-    <mat-button-toggle value="dateExp">Date expire</mat-button-toggle>
-    <mat-button-toggle value="dateAdd">Date added</mat-button-toggle>
-  </mat-button-toggle-group>
-</div>
-
-<div class="card-body">
-  <div class="table-responsive">
-    <table id="ProductsTable" class="table table-striped table-hover" style="width: 100%">
-      <thead>
-      <tr>
-        <th style="width: 2%"></th>
-        <th style="width: 60%; text-align: left;">Product</th>
-        <th style="width: 10%">Quantity</th>
-        <th style="width: 10%">Expire Date</th>
-        <th style="width: 3%">Edit</th>
-        <th style="width: 3%">Archive</th>
-      </tr>
-      </thead>
-      <tbody *ngFor="let visibleProduct of visibleProducts">
+  <nz-table [nzTemplateMode]="true"
+            [nzFrontPagination]="false">
+    <thead>
+    <tr>
+      <th
+        *ngFor="let column of listOfColumns"
+        [nzWidth]="column.width!"
+        [nzColumnKey]="column.nzColumnKey!"
+        [nzSortFn]="column.sortFn!"
+        [nzSortOrder]="column.sortOrder!"
+        [nzFilters]="column.listOfFilter!"
+        [nzFilterFn]="column.filterFn!"
+        class="first-row"
+      >{{column.name}}
+      </th>
+    </tr>
+    </thead>
+    <tbody>
+    <ng-container *ngFor="let visibleProduct of visibleProducts">
       <tr [class.expired]="visibleProduct.expireDate < currentTimeInMilliseconds"
           [class.expired-soon]="visibleProduct.expireDate < currentTimeInMilliseconds+259200000 && visibleProduct.expireDate > currentTimeInMilliseconds">
         <td>
@@ -90,7 +87,7 @@
           </button>
         </td>
       </tr>
-      </tbody>
-    </table>
-  </div>
+    </ng-container>
+    </tbody>
+  </nz-table>
 </div>
