--- a/WebAppModule/src/app/Components/products/search/search-product.component.html
+++ b/WebAppModule/src/app/Components/products/search/search-product.component.html
@@ -48,7 +48,7 @@
                  src="/assets/images/nutriscore/nutriscore-{{item.ecoscoreTags}}.svg">
           </mat-card-title-group>
           <mat-card-content>
-            {{item.categories}}
+            {{item.ingredientsText}}
           </mat-card-content>
           <div class="row justify-content-around">
             <button class="button-storage" (click)="openDialog(item.id)">Add to your storage
